# quant

monte_carlo/: .gitignore  CMakeLists.txt
monte_carlo/data/: sample_prices.csv
monte_carlo/src/: CSVFileReader.cpp  CSVFileReader.hpp  FileReader.hpp  FileReaderFactory.cpp  FileReaderFactory.hpp  FileType.hpp  HistoricalDataRepository.cpp  HistoricalDataRepository.hpp  main.cpp
qt_ep_chan/: 3_1.ipynb  3_5.ipynb  3_6.ipynb  6_3.ipynb  GDX.xls  GLD.xls
qt_ernest_chan/: 3_1.ipynb
rule_one/: calculator.ipynb
simple-trader/: README.md  pyproject.toml
simple-trader/src/strategy/: __init__.py  super_alpha_strategy.py
simple_trader/: .gitignore
simple_trader/src/: main.py
simple_trader/src/dotenv/: __init__.py  dotenv.py
simple_trader/src/strategy/: __init__.py
